--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "tailwindcss": "^2.2.7"
   },
   "dependencies": {
+    "highlight.js": "10.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "sqlite3": "^5.0.2"
