--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "concurrently": "^6.2.0",
     "cssnano": "^5.0.7",
     "electron": "^13.1.7",
+    "electron-rebuild": "^3.2.3",
     "postcss-cli": "^8.3.1",
     "shadow-cljs": "^2.15.2",
     "tailwindcss": "^2.2.7"
   },
   "dependencies": {
+    "better-sqlite3": "^7.4.3",
     "highlight.js": "10.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
