Clean: submit forms on enter. Better toast ani.
- fade-in-fade-out animation on toast
- add css folder to git history.

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,8 @@
 /.nrepl-port
 /.idea
 resources/public/js
-resources/public/css
+# only ignore the tailwind output.
+resources/public/css/site.css
 resources/main.js
 resources/*.js
 
