Add[batch]: Packaging script.
- Clean: remove public folder stuff.
- Fix: use userData path for sqlite db.
- Add: js annotations to windows.cljs (enable release mode compilation)
- Clean: remove hidden folders from build artifact.
- Clean: fmt.
- Add: release script.
- Fix: only show wipe-db in dev.
- Clean: remove unused deps.
- Fix: remove current article from nav bar when deleted.
- Clean: truncate stuff; start adding words known.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-/public/js
 /node_modules
 /target
 /yarn.lock
@@ -12,6 +11,8 @@ resources/public/js
 resources/public/css/site.css
 resources/main.js
 resources/*.js
+
+releases
 
 .lsp
 
