--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "trunk",
   "version": "1.0.0",
   "description": "",
+  "productName": "Trunk",
   "main": "resources/main.js",
   "scripts": {
-    "dev": "concurrently -p \"[{name}]\" -n \"CLJS, Electron boot\" -c \"red.bgBlack.bold,yellow.bgBlack.bold\" \"npm run dev-cljs\" \"npm run dev-electron\"",
-    "dev-cljs": "shadow-cljs watch main renderer preload",
+    "dev-cljs": "shadow-cljs watch main renderer",
     "dev-electron": "npx electron .",
-    "build": "shadow-cljs compile main renderer preload",
+    "build": "shadow-cljs compile main renderer",
+    "release-cljs": "shadow-cljs release main renderer",
     "clean": "rm -rf resources/public/js/* && rm -rf target",
+    "release-electron": "npx electron-packager . --out=releases --overwrite --ignore=\"(src*|.git*|.shadow-cljs*|.lsp*|resources/public/js/cljs-runtime*)\"",
+    "release": "npm run release-cljs; npm run release-electron",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -19,16 +22,18 @@
     "concurrently": "^6.2.0",
     "cssnano": "^5.0.7",
     "electron": "^13.1.7",
+    "electron-packager": "^15.4.0",
     "electron-rebuild": "^3.2.3",
     "postcss-cli": "^8.3.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "shadow-cljs": "^2.15.2",
     "tailwindcss": "^2.2.7"
   },
   "dependencies": {
     "better-sqlite3": "^7.4.3",
     "highlight.js": "10.7.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "sqlite3": "^5.0.2"
+    "sqlite3": "^5.0.2",
+    "ws": "^7.5.5"
   }
 }
