--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "pack": "npx electron-builder --dir",
     "dist": "DEBUG=electron-builder electron-builder",
     "rebuild": "electron-rebuild -f -w better-sqlite3",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "shadow-cljs compile test && node out/node-tests.js"
   },
   "author": {
     "name" : "The Ice Shelf",
