Feat: Add/Edit/Delete languages.
- Add: fetch langs from db for settings/language view.
  - get regexes and use them when splitting articles before inserting them
  - refactor util/word? to use custom regex. Same with not-word.
- Add: ability to edit languages (regexes).
- Clean: remove old language maps.
- Refactor: use `is_not_a_word` to determine styling in component/article-word.

UI Changes:

- Add[ui]: component/input: add highlight green/red on success/err based on :valid? prop.
- Fix[ui]: bottom save changes bar positioning.
- Fix[ui]: align open translations button.
- Add[ui]: "label" prop to inputs.
- Add[ui]: Style button based on type.
- Add[ui]: input: on-touched handle validation.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "clean": "rm -rf resources/public/js/* && rm -rf target",
     "pack": "npx electron-builder --dir",
     "dist": "DEBUG=electron-builder electron-builder",
+    "dist-local": "yarn build && DEBUG=electron-builder electron-builder",
     "rebuild": "electron-rebuild -f -w better-sqlite3",
     "test": "shadow-cljs compile test && node out/node-tests.js"
   },
